// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`resolveTypeDescriptors should fail descriptors for case-0 1`] = `
"Line 5, col 1:
  4 | @name(hello_world)
> 5 | get native sample(a: Int): Int;
      ^~~
Native functions cannot be getters"
`;

exports[`resolveTypeDescriptors should fail descriptors for case-1 1`] = `
"Line 5, col 1:
  4 | @name(hello_world)
> 5 | public native sample(a: Int): Int;
      ^~~~~~
Native functions cannot be public"
`;

exports[`resolveTypeDescriptors should fail descriptors for case-2 1`] = `
"Line 4, col 1:
  3 | 
> 4 | public fun sample(a: Int): Int {
      ^~~~~~
  5 |     return 0;
Public functions must be defined within a contract"
`;

exports[`resolveTypeDescriptors should fail descriptors for case-3 1`] = `
"Line 4, col 1:
  3 | 
> 4 | get fun sample(a: Int): Int {
      ^~~
  5 |     return 0;
Getters must be defined within a contract"
`;

exports[`resolveTypeDescriptors should fail descriptors for case-4 1`] = `
"Line 4, col 17:
  3 | 
> 4 | extends fun inc(a: Int): Int {
                      ^~~~~~
  5 |     return a + 1;
Extend function must have first argument named "self""
`;

exports[`resolveTypeDescriptors should fail descriptors for case-5 1`] = `
"Line 4, col 17:
  3 | 
> 4 | fun inc(a: Int, self: Int): Int {
                      ^~~~~~~~~
  5 |     return a + 1 + self;
Argument name "self" is reserved"
`;

exports[`resolveTypeDescriptors should resolve descriptors for case-0 1`] = `
{
  "Bool": {
    "ast": {
      "id": 2,
      "kind": "primitive",
      "name": "Bool",
      "ref": primitive Bool;,
    },
    "fields": [],
    "functions": [],
    "init": null,
    "kind": "primitive",
    "name": "Bool",
    "receivers": [],
  },
  "Int": {
    "ast": {
      "id": 1,
      "kind": "primitive",
      "name": "Int",
      "ref": primitive Int;,
    },
    "fields": [],
    "functions": [],
    "init": null,
    "kind": "primitive",
    "name": "Int",
    "receivers": [],
  },
}
`;

exports[`resolveTypeDescriptors should resolve descriptors for case-0 2`] = `{}`;

exports[`resolveTypeDescriptors should resolve descriptors for case-1 1`] = `
{
  "Bool": {
    "ast": {
      "id": 2,
      "kind": "primitive",
      "name": "Bool",
      "ref": primitive Bool;,
    },
    "fields": [],
    "functions": [],
    "init": null,
    "kind": "primitive",
    "name": "Bool",
    "receivers": [],
  },
  "Int": {
    "ast": {
      "id": 1,
      "kind": "primitive",
      "name": "Int",
      "ref": primitive Int;,
    },
    "fields": [],
    "functions": [],
    "init": null,
    "kind": "primitive",
    "name": "Int",
    "receivers": [],
  },
  "Struct1": {
    "ast": {
      "fields": [
        {
          "as": null,
          "id": 4,
          "init": undefined,
          "kind": "def_field",
          "name": "a",
          "ref": a: Int;,
          "type": {
            "id": 3,
            "kind": "type_ref_simple",
            "name": "Int",
            "optional": false,
            "ref": Int,
          },
        },
        {
          "as": null,
          "id": 6,
          "init": undefined,
          "kind": "def_field",
          "name": "b",
          "ref": b: Bool;,
          "type": {
            "id": 5,
            "kind": "type_ref_simple",
            "name": "Bool",
            "optional": false,
            "ref": Bool,
          },
        },
      ],
      "id": 7,
      "kind": "def_struct",
      "message": false,
      "name": "Struct1",
      "ref": struct Struct1 {
    a: Int;
    b: Bool;
},
    },
    "fields": [
      {
        "as": null,
        "default": undefined,
        "index": 0,
        "name": "a",
        "type": {
          "kind": "ref",
          "name": "Int",
          "optional": false,
        },
      },
      {
        "as": null,
        "default": undefined,
        "index": 1,
        "name": "b",
        "type": {
          "kind": "ref",
          "name": "Bool",
          "optional": false,
        },
      },
    ],
    "functions": [],
    "init": null,
    "kind": "struct",
    "name": "Struct1",
    "receivers": [],
  },
  "Struct2": {
    "ast": {
      "fields": [
        {
          "as": null,
          "id": 9,
          "init": undefined,
          "kind": "def_field",
          "name": "a",
          "ref": a: Struct1;,
          "type": {
            "id": 8,
            "kind": "type_ref_simple",
            "name": "Struct1",
            "optional": false,
            "ref": Struct1,
          },
        },
      ],
      "id": 10,
      "kind": "def_struct",
      "message": false,
      "name": "Struct2",
      "ref": struct Struct2 {
    a: Struct1;
},
    },
    "fields": [
      {
        "as": null,
        "default": undefined,
        "index": 0,
        "name": "a",
        "type": {
          "kind": "ref",
          "name": "Struct1",
          "optional": false,
        },
      },
    ],
    "functions": [],
    "init": null,
    "kind": "struct",
    "name": "Struct2",
    "receivers": [],
  },
}
`;

exports[`resolveTypeDescriptors should resolve descriptors for case-1 2`] = `{}`;

exports[`resolveTypeDescriptors should resolve descriptors for case-2 1`] = `
{
  "Bool": {
    "ast": {
      "id": 2,
      "kind": "primitive",
      "name": "Bool",
      "ref": primitive Bool;,
    },
    "fields": [],
    "functions": [],
    "init": null,
    "kind": "primitive",
    "name": "Bool",
    "receivers": [],
  },
  "Int": {
    "ast": {
      "id": 1,
      "kind": "primitive",
      "name": "Int",
      "ref": primitive Int;,
    },
    "fields": [],
    "functions": [],
    "init": null,
    "kind": "primitive",
    "name": "Int",
    "receivers": [],
  },
}
`;

exports[`resolveTypeDescriptors should resolve descriptors for case-2 2`] = `
{
  "testFunc": {
    "args": [],
    "ast": {
      "args": [],
      "attributes": [],
      "id": 6,
      "kind": "def_function",
      "name": "testFunc",
      "ref": fun testFunc(): Int {
    return 0;
},
      "return": {
        "id": 3,
        "kind": "type_ref_simple",
        "name": "Int",
        "optional": false,
        "ref": Int,
      },
      "statements": [
        {
          "expression": {
            "id": 4,
            "kind": "number",
            "ref": 0,
            "value": 0n,
          },
          "id": 5,
          "kind": "statement_return",
          "ref": return 0;,
        },
      ],
    },
    "isGetter": false,
    "isMutating": false,
    "isPublic": false,
    "name": "testFunc",
    "returns": {
      "kind": "ref",
      "name": "Int",
      "optional": false,
    },
    "self": null,
  },
  "testFunc2": {
    "args": [],
    "ast": {
      "args": [],
      "attributes": [],
      "id": 9,
      "kind": "def_function",
      "name": "testFunc2",
      "ref": fun testFunc2() {
    return 0;
},
      "return": null,
      "statements": [
        {
          "expression": {
            "id": 7,
            "kind": "number",
            "ref": 0,
            "value": 0n,
          },
          "id": 8,
          "kind": "statement_return",
          "ref": return 0;,
        },
      ],
    },
    "isGetter": false,
    "isMutating": false,
    "isPublic": false,
    "name": "testFunc2",
    "returns": null,
    "self": null,
  },
  "testFunc3": {
    "args": [
      {
        "as": null,
        "name": "a",
        "ref": a: Int,
        "type": {
          "kind": "ref",
          "name": "Int",
          "optional": false,
        },
      },
      {
        "as": null,
        "name": "b",
        "ref": b: Bool,
        "type": {
          "kind": "ref",
          "name": "Bool",
          "optional": false,
        },
      },
    ],
    "ast": {
      "args": [
        {
          "id": 11,
          "kind": "def_argument",
          "name": "a",
          "ref": a: Int,
          "type": {
            "id": 10,
            "kind": "type_ref_simple",
            "name": "Int",
            "optional": false,
            "ref": Int,
          },
        },
        {
          "id": 13,
          "kind": "def_argument",
          "name": "b",
          "ref": b: Bool,
          "type": {
            "id": 12,
            "kind": "type_ref_simple",
            "name": "Bool",
            "optional": false,
            "ref": Bool,
          },
        },
      ],
      "attributes": [],
      "id": 16,
      "kind": "def_function",
      "name": "testFunc3",
      "ref": fun testFunc3(a: Int, b: Bool) {
    return 0;
},
      "return": null,
      "statements": [
        {
          "expression": {
            "id": 14,
            "kind": "number",
            "ref": 0,
            "value": 0n,
          },
          "id": 15,
          "kind": "statement_return",
          "ref": return 0;,
        },
      ],
    },
    "isGetter": false,
    "isMutating": false,
    "isPublic": false,
    "name": "testFunc3",
    "returns": null,
    "self": null,
  },
}
`;

exports[`resolveTypeDescriptors should resolve descriptors for case-3 1`] = `
{
  "Bool": {
    "ast": {
      "id": 2,
      "kind": "primitive",
      "name": "Bool",
      "ref": primitive Bool;,
    },
    "fields": [],
    "functions": [],
    "init": null,
    "kind": "primitive",
    "name": "Bool",
    "receivers": [],
  },
  "HelloWorld": {
    "ast": {
      "declarations": [
        {
          "as": null,
          "id": 4,
          "init": undefined,
          "kind": "def_field",
          "name": "a",
          "ref": a: Int;,
          "type": {
            "id": 3,
            "kind": "type_ref_simple",
            "name": "Int",
            "optional": false,
            "ref": Int,
          },
        },
        {
          "as": null,
          "id": 6,
          "init": undefined,
          "kind": "def_field",
          "name": "b",
          "ref": b: Bool;,
          "type": {
            "id": 5,
            "kind": "type_ref_simple",
            "name": "Bool",
            "optional": false,
            "ref": Bool,
          },
        },
        {
          "args": [],
          "attributes": [],
          "id": 7,
          "kind": "def_function",
          "name": "hello",
          "ref": fun hello() {
        
    },
          "return": null,
          "statements": [],
        },
        {
          "args": [],
          "attributes": [],
          "id": 8,
          "kind": "def_function",
          "name": "hello2",
          "ref": fun hello2() {
        
    },
          "return": null,
          "statements": [],
        },
      ],
      "id": 9,
      "kind": "def_contract",
      "name": "HelloWorld",
      "ref": contract HelloWorld {
    a: Int;
    b: Bool;

    fun hello() {
        
    }

    fun hello2() {
        
    }
},
    },
    "fields": [
      {
        "as": null,
        "default": undefined,
        "index": 0,
        "name": "a",
        "type": {
          "kind": "ref",
          "name": "Int",
          "optional": false,
        },
      },
      {
        "as": null,
        "default": undefined,
        "index": 1,
        "name": "b",
        "type": {
          "kind": "ref",
          "name": "Bool",
          "optional": false,
        },
      },
    ],
    "functions": [
      {
        "args": [],
        "ast": {
          "args": [],
          "attributes": [],
          "id": 7,
          "kind": "def_function",
          "name": "hello",
          "ref": fun hello() {
        
    },
          "return": null,
          "statements": [],
        },
        "isGetter": false,
        "isMutating": false,
        "isPublic": false,
        "name": "hello",
        "returns": null,
        "self": "HelloWorld",
      },
      {
        "args": [],
        "ast": {
          "args": [],
          "attributes": [],
          "id": 8,
          "kind": "def_function",
          "name": "hello2",
          "ref": fun hello2() {
        
    },
          "return": null,
          "statements": [],
        },
        "isGetter": false,
        "isMutating": false,
        "isPublic": false,
        "name": "hello2",
        "returns": null,
        "self": "HelloWorld",
      },
    ],
    "init": null,
    "kind": "contract",
    "name": "HelloWorld",
    "receivers": [],
  },
  "Int": {
    "ast": {
      "id": 1,
      "kind": "primitive",
      "name": "Int",
      "ref": primitive Int;,
    },
    "fields": [],
    "functions": [],
    "init": null,
    "kind": "primitive",
    "name": "Int",
    "receivers": [],
  },
}
`;

exports[`resolveTypeDescriptors should resolve descriptors for case-3 2`] = `{}`;

exports[`resolveTypeDescriptors should resolve descriptors for case-4 1`] = `
{
  "Bool": {
    "ast": {
      "id": 2,
      "kind": "primitive",
      "name": "Bool",
      "ref": primitive Bool;,
    },
    "fields": [],
    "functions": [],
    "init": null,
    "kind": "primitive",
    "name": "Bool",
    "receivers": [],
  },
  "Int": {
    "ast": {
      "id": 1,
      "kind": "primitive",
      "name": "Int",
      "ref": primitive Int;,
    },
    "fields": [],
    "functions": [],
    "init": null,
    "kind": "primitive",
    "name": "Int",
    "receivers": [],
  },
}
`;

exports[`resolveTypeDescriptors should resolve descriptors for case-4 2`] = `
{
  "sample": {
    "args": [
      {
        "as": null,
        "name": "a",
        "ref": a: Int,
        "type": {
          "kind": "ref",
          "name": "Int",
          "optional": false,
        },
      },
    ],
    "ast": {
      "args": [
        {
          "id": 5,
          "kind": "def_argument",
          "name": "a",
          "ref": a: Int,
          "type": {
            "id": 4,
            "kind": "type_ref_simple",
            "name": "Int",
            "optional": false,
            "ref": Int,
          },
        },
      ],
      "attributes": [],
      "id": 6,
      "kind": "def_native_function",
      "name": "sample",
      "nativeName": "hello_world",
      "ref": @name(hello_world)
native sample(a: Int): Int;,
      "return": {
        "id": 3,
        "kind": "type_ref_simple",
        "name": "Int",
        "optional": false,
        "ref": Int,
      },
    },
    "isGetter": false,
    "isMutating": false,
    "isPublic": false,
    "name": "sample",
    "returns": {
      "kind": "ref",
      "name": "Int",
      "optional": false,
    },
    "self": null,
  },
}
`;

exports[`resolveTypeDescriptors should resolve descriptors for case-5 1`] = `
{
  "Bool": {
    "ast": {
      "id": 2,
      "kind": "primitive",
      "name": "Bool",
      "ref": primitive Bool;,
    },
    "fields": [],
    "functions": [],
    "init": null,
    "kind": "primitive",
    "name": "Bool",
    "receivers": [],
  },
  "Int": {
    "ast": {
      "id": 1,
      "kind": "primitive",
      "name": "Int",
      "ref": primitive Int;,
    },
    "fields": [],
    "functions": [
      {
        "args": [],
        "ast": {
          "args": [
            {
              "id": 5,
              "kind": "def_argument",
              "name": "self",
              "ref": self: Int,
              "type": {
                "id": 4,
                "kind": "type_ref_simple",
                "name": "Int",
                "optional": false,
                "ref": Int,
              },
            },
          ],
          "attributes": [
            {
              "ref": mutates,
              "type": "mutates",
            },
            {
              "ref": extends,
              "type": "extends",
            },
          ],
          "id": 6,
          "kind": "def_native_function",
          "name": "inc",
          "nativeName": "inc",
          "ref": @name(inc)
mutates extends native inc(self: Int): Int;,
          "return": {
            "id": 3,
            "kind": "type_ref_simple",
            "name": "Int",
            "optional": false,
            "ref": Int,
          },
        },
        "isGetter": false,
        "isMutating": true,
        "isPublic": false,
        "name": "inc",
        "returns": {
          "kind": "ref",
          "name": "Int",
          "optional": false,
        },
        "self": "Int",
      },
    ],
    "init": null,
    "kind": "primitive",
    "name": "Int",
    "receivers": [],
  },
}
`;

exports[`resolveTypeDescriptors should resolve descriptors for case-5 2`] = `{}`;

exports[`resolveTypeDescriptors should resolve descriptors for case-6 1`] = `
{
  "Bool": {
    "ast": {
      "id": 2,
      "kind": "primitive",
      "name": "Bool",
      "ref": primitive Bool;,
    },
    "fields": [],
    "functions": [],
    "init": null,
    "kind": "primitive",
    "name": "Bool",
    "receivers": [],
  },
  "Int": {
    "ast": {
      "id": 1,
      "kind": "primitive",
      "name": "Int",
      "ref": primitive Int;,
    },
    "fields": [],
    "functions": [
      {
        "args": [],
        "ast": {
          "args": [
            {
              "id": 5,
              "kind": "def_argument",
              "name": "self",
              "ref": self: Int,
              "type": {
                "id": 4,
                "kind": "type_ref_simple",
                "name": "Int",
                "optional": false,
                "ref": Int,
              },
            },
          ],
          "attributes": [
            {
              "ref": extends,
              "type": "extends",
            },
          ],
          "id": 10,
          "kind": "def_function",
          "name": "inc",
          "ref": extends fun inc(self: Int): Int {
    return self + 1;
},
          "return": {
            "id": 3,
            "kind": "type_ref_simple",
            "name": "Int",
            "optional": false,
            "ref": Int,
          },
          "statements": [
            {
              "expression": {
                "id": 8,
                "kind": "op_binary",
                "left": {
                  "id": 6,
                  "kind": "id",
                  "ref": self,
                  "value": "self",
                },
                "op": "+",
                "ref": self + 1,
                "right": {
                  "id": 7,
                  "kind": "number",
                  "ref": 1,
                  "value": 1n,
                },
              },
              "id": 9,
              "kind": "statement_return",
              "ref": return self + 1;,
            },
          ],
        },
        "isGetter": false,
        "isMutating": false,
        "isPublic": false,
        "name": "inc",
        "returns": {
          "kind": "ref",
          "name": "Int",
          "optional": false,
        },
        "self": "Int",
      },
    ],
    "init": null,
    "kind": "primitive",
    "name": "Int",
    "receivers": [],
  },
}
`;

exports[`resolveTypeDescriptors should resolve descriptors for case-6 2`] = `{}`;
